changes in profile!

--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,6 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/profile.css">
-    <link rel="stylesheet" href="css/add-tocart.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.green.css">
@@ -95,7 +94,7 @@
                                             class="fa-solid fa-user-pen mx-2 text-success"></i>Order</button></a>
                             </li>
                             <li class="col-lg-3 col-md-6 mb-3 col-6 ">
-                                <a href="whislist.html"><button class="bn632-hover bn18 "><i
+                                <a href=""><button class="bn632-hover bn18 "><i
                                             class="fa-solid fa-heart mx-2 text-success"></i>Wishlist</button></a>
                             </li>
                             <li class="col-lg-3 mb-2 col-md-12 col-12 ">
