--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </section>
 
     <div class="payment-banner-top-img container mb-3">
-      <img class="img-fluid m-auto d-block" src="/images/add-container-fluid2.jpg" alt="">
+      <img class="img-fluid m-auto d-block" src="https://github.com/Vijay1234667/Ecommerce-Website/blob/master/images/add-container-fluid1.jpg" alt="">
     </div>
 
     <!-- product-banner -->
