--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
           <h5 class="pt-3 fw-bold">Discount on your sale</h5>
           <div class="owl-carousel owl-theme">
             <div class="item">
-              <img class="img-fluid" src="/images/corousel ref-nayka.jpg" alt="">
+              <img class="img-fluid" src="images/corousel ref-nayka.jpg" alt="">
             </div>
             <div class="item">
-              <img class="img-fluid" src="/images/corousel ref-nayka1.jpg" alt="">
+              <img class="img-fluid" src="images/corousel ref-nayka1.jpg" alt="">
             </div>
             <div class="item">
-              <img class="img-fluid" src="/images/corousel ref-nayka2.jpg" alt="">
+              <img class="img-fluid" src="images/corousel ref-nayka2.jpg" alt="">
             </div>
             <div class="item">
-              <img class="img-fluid" src="/images/corousel ref-nayka4.jpg" alt="">
+              <img class="img-fluid" src="images/corousel ref-nayka4.jpg" alt="">
             </div>
           </div>
         </div>
