--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/add-tocart.css">
+    <link rel="stylesheet" href="css/profile.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <script src="js/jquery.min.js">
