--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <!-- main-wrapper-section -->
     <section class="main-wrapper-section">
       <div class="container">
-        <div class="row">
+        <div class="row ">
           <div class="col-md-4">
             <div class="mega-sale-sidebar-image">
               <img class="img-fluid" src="/homepageimages/left-top-sale.avif" alt="" width="100%">
@@ -278,7 +278,7 @@
                   <!-- <div class="col-lg-12">
                     <img class="img-fluid" src="images/add-container-fluid2.jpg" alt="">
                   </div> -->
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/item7.png" class="card-img-top img-fluid"
                           alt="...">
@@ -303,7 +303,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/item5.png" class="card-img-top img-fluid"
                           alt="...">
@@ -328,7 +328,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/item4.png" class="card-img-top img-fluid"
                           alt="...">
@@ -353,7 +353,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/watches1.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -378,7 +378,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/bag1.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -403,7 +403,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/cap1.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -428,7 +428,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/shoes3.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -453,7 +453,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/shoes2.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -478,7 +478,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/sho.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -503,7 +503,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/girlscat3.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -528,7 +528,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/girlscat2.jpg" class="card-img-top img-fluid"
                           alt="...">
@@ -553,7 +553,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 col-6">
                     <div class="product-cards-main-body">
                       <a href="add-to-cart.html"><img src="homepageimages/girlscat1.jpg" class="card-img-top img-fluid"
                           alt="...">
