--- a/index.html
+++ b/index.html
@@ -599,14 +599,14 @@
     <section class="computer-section">
       <div class="container">
         <div class="computer-main-body-content">
-          <div class="row">
-            <div class="col-lg-2">
+          <div class="row g-0 ">
+            <div class="col-lg-2 col-12">
               <img class="img-fluid" src="homepageimages/mobileadd1.gif" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-8">
               <img class="img-fluid" src="images/computer-offers add.jpg" alt="">
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-4">
               <img class="img-fluid" src="images/computerleft-add.jpg" alt="">
             </div>
           </div>
@@ -614,7 +614,7 @@
             <div class="col-lg-2">
               <img class="img-fluid" src="homepageimages/mobileadd4.gif" alt="">
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/computer-item1.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -639,7 +639,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/computer-item2.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -664,7 +664,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/computer-item3.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -689,7 +689,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/computer-item4.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -714,7 +714,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/computer-item2.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -756,65 +756,12 @@
             <div class="col-lg-8">
               <img class="img-fluid" src="images/electronic-offers.jpg" alt="">
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 ">
               <img class="img-fluid" src="images/electronicadd1.jpg" alt="">
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-2">
-              <img class="img-fluid" src="images/electronicadd1.jpg" alt="">
-            </div>
-            <div class="col-lg-2">
-              <div class="">
-                <a href="add-to-cart.html"><img src="images/electronic item1.jpg" class="card-img-top img-fluid"
-                    alt="...">
-                </a>
-                <div class="product-body text-center">
-                  <span class="product-name">Jacket, Women</span>
-                  <h6 class="product-price"><span>&#8377;</span>25.15 <del
-                      class="discount"><span>&#8377;</span>30.15</del></h6>
-                  <div class="left-sidebar-yellow-star mb-2">
-                    <i class="fa-solid fa-star "></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                  </div>
-                  <div class="mb-2">
-                    <a class="home-card-btn electronic-section-btn" href="add-to-cart.html"><i
-                        class="fa-solid fa-cart-plus px-2 text-success"></i>Buy Now</a>
-                  </div>
-                  <div class="product-tag">
-                    <span class="badge badge-secondary">32% off</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-2">
-              <div class="">
-                <a href="add-to-cart.html"><img src="images/electronic item5.jpg" class="card-img-top img-fluid"
-                    alt="...">
-                </a>
-                <div class="product-body text-center">
-                  <span class="product-name">Jacket, Women</span>
-                  <h6 class="product-price"><span>&#8377;</span>25.15 <del
-                      class="discount"><span>&#8377;</span>30.15</del></h6>
-                  <div class="left-sidebar-yellow-star mb-2">
-                    <i class="fa-solid fa-star "></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                  </div>
-                  <div class="mb-2">
-                    <a class="home-card-btn electronic-section-btn" href="add-to-cart.html"><i
-                        class="fa-solid fa-cart-plus px-2 text-success"></i>Buy Now</a>
-                  </div>
-                  <div class="product-tag">
-                    <span class="badge badge-secondary">32% off</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/electronic item3.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -839,7 +786,82 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
+              <div class="">
+                <a href="add-to-cart.html"><img src="images/electronic item1.jpg" class="card-img-top img-fluid"
+                    alt="...">
+                </a>
+                <div class="product-body text-center">
+                  <span class="product-name">Jacket, Women</span>
+                  <h6 class="product-price"><span>&#8377;</span>25.15 <del
+                      class="discount"><span>&#8377;</span>30.15</del></h6>
+                  <div class="left-sidebar-yellow-star mb-2">
+                    <i class="fa-solid fa-star "></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                  <div class="mb-2">
+                    <a class="home-card-btn electronic-section-btn" href="add-to-cart.html"><i
+                        class="fa-solid fa-cart-plus px-2 text-success"></i>Buy Now</a>
+                  </div>
+                  <div class="product-tag">
+                    <span class="badge badge-secondary">32% off</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-6">
+              <div class="">
+                <a href="add-to-cart.html"><img src="images/electronic item5.jpg" class="card-img-top img-fluid"
+                    alt="...">
+                </a>
+                <div class="product-body text-center">
+                  <span class="product-name">Jacket, Women</span>
+                  <h6 class="product-price"><span>&#8377;</span>25.15 <del
+                      class="discount"><span>&#8377;</span>30.15</del></h6>
+                  <div class="left-sidebar-yellow-star mb-2">
+                    <i class="fa-solid fa-star "></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                  <div class="mb-2">
+                    <a class="home-card-btn electronic-section-btn" href="add-to-cart.html"><i
+                        class="fa-solid fa-cart-plus px-2 text-success"></i>Buy Now</a>
+                  </div>
+                  <div class="product-tag">
+                    <span class="badge badge-secondary">32% off</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-6">
+              <div class="">
+                <a href="add-to-cart.html"><img src="images/electronic item3.jpg" class="card-img-top img-fluid"
+                    alt="...">
+                </a>
+                <div class="product-body text-center">
+                  <span class="product-name">Jacket, Women</span>
+                  <h6 class="product-price"><span>&#8377;</span>25.15 <del
+                      class="discount"><span>&#8377;</span>30.15</del></h6>
+                  <div class="left-sidebar-yellow-star mb-2">
+                    <i class="fa-solid fa-star "></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                  <div class="mb-2">
+                    <a class="home-card-btn electronic-section-btn" href="add-to-cart.html"><i
+                        class="fa-solid fa-cart-plus px-2 text-success"></i>Buy Now</a>
+                  </div>
+                  <div class="product-tag">
+                    <span class="badge badge-secondary">32% off</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/electronic item2.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -864,7 +886,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-6">
               <div class="">
                 <a href="add-to-cart.html"><img src="images/electronic item4.jpg" class="card-img-top img-fluid"
                     alt="...">
@@ -897,14 +919,14 @@
 
     <!-- trending-section -->
 
-    <section class="trending-section">
+    <section class="trending-section mb-3">
       <div class="container">
         <div class="text-center mb-2">
           <h4 class="fw-bold mb-2">TRENDING</h4>
           <i>Top view in this week</i>
         </div>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/tredingimg1.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -928,7 +950,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/trendimg2.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -952,7 +974,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/trendimg5.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -976,7 +998,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/trendimg6.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -1000,7 +1022,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/tendimg3.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -1024,7 +1046,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/tendimg4.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -1048,7 +1070,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/trendimg7.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -1072,7 +1094,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-6">
             <div class="">
               <a href="add-to-cart.html"><img src="images/trendimg-8.jpg" class="card-img-top img-fluid" alt="...">
               </a>
@@ -1099,12 +1121,6 @@
         </div>
       </div>
     </section>
-
-
-
-
-
-
 
 
     <!-- addimg-mid-sec -->
