--- a/cart.html
+++ b/cart.html
@@ -239,8 +239,8 @@
             </div>
         </div>
     </section>
+    <!-- footer-section -->
 
-    <!-- footer -->
     <footer class="footer-section ">
         <div class="container">
             <div class="row footer-top">
@@ -296,7 +296,7 @@
                     </div>
                 </div>
     
-                <div class="col-lg-3 col-md-6 col-12 mb-2">
+                <div class="col-lg-3 col-md-6 col-6 mb-2">
                     <h6>SOME POSTS</h6>
                     <div class="footer-post-sec">
                         <div>
@@ -331,7 +331,7 @@
                     </div>
                 </div>
     
-                <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-6 ">
                     <h6>POPULAR TAGS</h6>
                     <div class="footer-column-links-tags">
                         <a href="">HEADPHONESS</a>
@@ -380,6 +380,7 @@
             </div>
         </div>
     </footer>
+
 
 
     <script>
