--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -80,6 +80,11 @@
                     </div>
 
                     <style>
+                        .swiper {
+                            width: 100%;
+                            height: 100%;
+                        }
+                
                         .swiper-slide {
                             text-align: center;
                             font-size: 18px;
@@ -95,6 +100,7 @@
                             height: 100%;
                             object-fit: cover;
                         }
+            
                         .swiper {
                             width: 100%;
                             height: 300px;
@@ -591,6 +597,30 @@
             </div>
         </div>
     </footer>
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+      var swiper = new Swiper(".mySwiper", {
+          loop: true,
+          spaceBetween: 10,
+          slidesPerView: 4,
+          freeMode: true,
+          watchSlidesProgress: true,
+      });
+      var swiper2 = new Swiper(".mySwiper2", {
+          loop: true,
+          spaceBetween: 10,
+          navigation: {
+              nextEl: ".swiper-button-next",
+              prevEl: ".swiper-button-prev",
+          },
+          thumbs: {
+              swiper: swiper,
+          },
+      });
+  </script>
 
 
     <!-- footer-section -->
