--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
       <div class="container-fluid">
         <div class="banner-product-all-categories-main-body mt-2">
           <div class="categories-brand">
-            <a href=""><img class="img-fluid mb-2 d-block m-auto" src="homepageimages/b1.png" alt=""></a>
+            <a href=""><img class="img-fluid mb-2" src="homepageimages/b1.png" alt=""></a>
             <h6>Mobile & Tablets</h6>
           </div>
           <div class="categories-brand">
-            <a href=""><img class="img-fluid mb-2 d-block m-auto" src="homepageimages/b6.jpg" alt=""></a>
+            <a href=""><img class="img-fluid mb-2" src="homepageimages/b6.jpg" alt=""></a>
             <h6>Electronics</h6>
           </div>
           <div>
-            <a href=""><img class="img-fluid mb-2 d-block m-auto" src="homepageimages/b3.png" alt=""></a>
+            <a href=""><img class="img-fluid mb-2 " src="homepageimages/b3.png" alt=""></a>
             <h6>Fashion</h6>
           </div>
           <div>
-            <a href=""><img class="img-fluid mb-2 d-block m-auto" src="homepageimages/b4.png" alt=""></a>
+            <a href=""><img class="img-fluid mb-2" src="homepageimages/b4.png" alt=""></a>
             <h6>Travel</h6>
           </div>
           <div>
