--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landwind.Css-Page/">Page1</a></li>
-                <li><a class="dropdown-item" href="#">Page2</a></li>
+                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Asmelhore-lander/">Page2</a></li>
                 <li><a class="dropdown-item" href="#">Page3</a></li>
               </ul>
             </li>
