all index and footer are change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <header>
     <nav class="navbar navbar-expand-md fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -129,16 +129,17 @@
             </div>
           </form>
 
-          <ul class="navbar-nav m-auto  nav-brand-icons">
-            <li class="nav-item">
-              <a href=""><i class="fa-solid fa-cart-shopping p-2 "></i>
-              </a>
-            </li>
+          <ul class="navbar-nav nav-brand-icons">
+           
             <li class="nav-item">
               <a href="profile.html"><i class="fa-solid fa-user  p-2"></i>
               </a>
             </li>
-            <li class=" login-btn ms-auto">
+            <li class="nav-item">
+                <a href=""><i class="fa-solid fa-cart-shopping p-2 "></i>
+                </a>
+              </li>
+            <li class=" login-btn mx-1">
               <a href="profile.html"><a href="" class="btn">Login</a>
               </a>
             </li>
