--- a/profile.html
+++ b/profile.html
@@ -24,129 +24,132 @@
 <body>
     <!-- navigation -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light ">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto  mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Home
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Page1</a></li>
-                                <li><a class="dropdown-item" href="#">Page2</a></li>
-                                <li><a class="dropdown-item" href="#">Page3</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Products
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Categeory
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Coupan
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Our Stores
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Portfolio
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Portfolio1</a></li>
-                                <li><a class="dropdown-item" href="#">Portfolio2</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Portfolio3</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex search-body">
-                        <input class="form-control me-2" list="datalistOptions" placeholder="Search">
-                        <datalist id="datalistOptions">
-                            <option value="Tshirt"></option>
-                            <option value="shirt"></option>
-                            <option value="Laptop"></option>
-                            <option value="MenTshirt"></option>
-                            <option value="Shoes"></option>
-                            </section>
-                        </datalist>
-                        <button class="btn" type="submit">Search</button>
-                    </form>
-                    <ul class="navbar-nav m-auto  nav-brand-icons">
-                        <li class="nav-item">
-                            <a href=""><i class="fa-solid fa-cart-shopping p-2 "></i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="profile.html"><i class="fa-solid fa-user  p-2"></i>
-                            </a>
-                        </li>
-                        <li class=" login-btn ms-auto">
-                            <a href="profile.html"><a href="" class="btn">Login</a>
-                            </a>
-                        </li>
-                    </ul>
+        <nav class="navbar navbar-expand-md fixed-top">
+          <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Home
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landwind.Css-Page/">Page1</a></li>
+                    <li><a class="dropdown-item" href="https://vijay1234667.github.io/Asmelhore-lander/">Page2</a></li>
+                    <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landing-Page/">Page3</a></li>
+                    <li><a class="dropdown-item" href="https://vijay1234667.github.io/Wooder-carpenter-page/">Page4</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Products
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Categeory
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Coupan
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Our Stores
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Portfolio
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Portfolio1</a></li>
+                    <li><a class="dropdown-item" href="#">Portfolio2</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Portfolio3</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <form class="d-flex search-body m-auto">
+                <input class="form-control me-2" list="datalistOptions" placeholder="Search, Brand,Product....">
+                <datalist id="datalistOptions">
+                  <option value="Tshirt"></option>
+                  <option value="shirt"></option>
+                  <option value="Laptop"></option>
+                  <option value="MenTshirt"></option>
+                  <option value="Shoes"></option>
+                  </section>
+                </datalist>
+                <div>
+                  <a href="" class="btn"><i class="fa-solid fa-magnifying-glass fs-5 text-success"></i></a>
                 </div>
+              </form>
+    
+              <ul class="navbar-nav nav-brand-icons">
+               
+                <li class="nav-item">
+                  <a href="profile.html"><i class="fa-solid fa-user  p-2"></i>
+                  </a>
+                </li>
+                <li class="nav-item">
+                    <a href=""><i class="fa-solid fa-cart-shopping p-2 "></i>
+                    </a>
+                  </li>
+                <li class=" login-btn mx-1">
+                  <a href="profile.html"><a href="" class="btn">Login</a>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
         </nav>
-    </header>
+      </header>
 
     <main role="main">
         <section class="main-profile-wrapper-body">
